# fft-cnr

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: compat.yml  docs.yml  publish.yml  test.yml
assets/: hero.py
docs/: api.md  conf.py  index.md  installation.md  quickstart.md
fft_cnr/: __init__.py  characterization.py  estimator.py  version.py
scripts/: _signals.py  compare_cnr_accuracy.py  validate_accuracy.py  validate_amplitude_se.py  validate_cnr_ci_decomposition.py  validate_iscat_baseline.py  validate_noise_model.py
src/fft_cnr/: __init__.py  core.py
tests/: test_characterization.py  test_core.py  test_estimator.py
