[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fft-cnr"
version = "0.1.0"
description = "FFT-based Contrast-to-Noise Ratio estimation for 1D signal profiles"
readme = "README.md"
authors = [
    {name = "Joseph J. Thiebes", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
]
keywords = ["fft", "cnr", "contrast-to-noise-ratio", "signal-processing", "noise-estimation"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
viz = [
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/fft-cnr"
Repository = "https://github.com/yourusername/fft-cnr"
Issues = "https://github.com/yourusername/fft-cnr/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools]
packages = ["fft_cnr"]
