[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fft-cnr"
version = "0.1.1"
description = "FFT-based contrast-to-noise ratio estimation from single frames"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Joseph J. Thiebes" },
]
keywords = ["cnr", "fft", "signal-processing", "noise", "measurement"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.urls]
Repository = "https://github.com/thiebes/fft-cnr"

[tool.hatch.build.targets.wheel]
packages = ["src/fft_cnr"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
validation = [
    "jupyter>=1.0",
    "matplotlib>=3.7",
    "tqdm>=4.60",
]
